plugins {
    id 'java'
    id 'idea'
    id 'com.gradle.plugin-publish' version '1.2.0'
}

group = 'io.micrc.core'
version = 'v0.0.1'
sourceCompatibility = '11'
targetCompatibility = '11'

ext {
    set("spring-boot-gradle-plugin.version", '2.7.11')
    set("jib-gradle-plugin.version", '3.3.1')
    set("guava.version", '31.1-jre')
    set("commons-io.version", '2.11.0')
    set('gradle-api.version', '7.6')
    set("groovy-all.version", '3.0.10')
    set("lombok.version", '1.18.24')
    set("swagger-parser.version", '2.0.25')
}

repositories {
    mavenLocal()
    gradlePluginPortal()
    mavenCentral()
}

dependencies {
    implementation "org.springframework.boot:spring-boot-gradle-plugin:${property('spring-boot-gradle-plugin.version')}"
    implementation "com.google.cloud.tools:jib-gradle-plugin:${property('jib-gradle-plugin.version')}"
    implementation "com.google.guava:guava:${property('guava.version')}"
    implementation "commons-io:commons-io:${property('commons-io.version')}"

    implementation "dev.gradleplugins:gradle-api:${property('gradle-api.version')}"
    implementation "org.codehaus.groovy:groovy-all:${property('groovy-all.version')}"

    compileOnly "org.projectlombok:lombok:${property('lombok.version')}"
    annotationProcessor "org.projectlombok:lombok:${property('lombok.version')}"

    implementation "io.swagger.parser.v3:swagger-parser:${property('swagger-parser.version')}"
}

gradlePlugin {
    website = 'https://github.com/micrc-io/micrc-gradle-plugin'
    vcsUrl = 'https://github.com/micrc-io/micrc-gradle-plugin'
    plugins {
        micrcCompilation {
            id = 'io.micrc.core.gradle.plugin'
            implementationClass = 'io.micrc.core.gradle.plugin.MicrcCompilationPlugin'
            displayName = 'micrc gradle plugin'
            description = 'A gradle plugin supports configuring project dependencies, generating code and cluster deployment files from metadata, etc.'
            tags.set(['micrc', 'microcode', 'generator'])
        }
    }
}
